--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -1,4 +1,4 @@
-name: CI
+name: Sync
 on:
   workflow_dispatch:
     inputs:
@@ -12,7 +12,7 @@ on:
           - 'develop'
 
 jobs:
-  build:
+  sync:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
