--- a/package.json
+++ b/package.json
@@ -4,5 +4,12 @@
   "main": "index.js",
   "repository": "git@github.com:TheodosiouTh/test-ci-cd.git",
   "author": "Thanos THeodosiou <thanosthd@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/release-notes-generator": "^14.0.3",
+    "semantic-release": "^24.2.1"
+  }
 }
