chore: Make input a choice instead of text input

--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -3,9 +3,9 @@ on:
   workflow_dispatch:
     inputs:
       target:
+        type: choice
         description: 'Branch we want to sync'
         required: true
-        default: 'staging'
         options:
           - 'master'
           - 'staging'
