--- a/.github/workflows/version-and-tag.yaml
+++ b/.github/workflows/version-and-tag.yaml
@@ -25,13 +25,4 @@ jobs:
       - name: Sync Branches
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_ACCESS_TOKEN }}
-        run: | 
-          git pull;
-          git checkout staging;
-          git pull;
-          git rebase master;
-          git push --force
-          git checkout develop;
-          git pull;
-          git rebase staging;
-          git push --force
+        run:  git pull && git checkout staging && git pull && git rebase master &&  git push --force && git checkout develop && git pull && git rebase staging && git push --force;
